@@ -36,6 +36,7 @@
 			<parameter type="bool" name="sysinfoPBtheme" displaytext="{tr(sysinfoPBtheme)}">1</parameter>
 			<parameter type="bool" name="coloredElapsed" displaytext="{tr(coloredElapsed)}">0</parameter>
 			<parameter type="bool" name="ecmInside" displaytext="{tr(ecmInside)}">1</parameter>
+			<parameter type="bool" name="showDiscUsage" displaytext="{tr(showDiscUsage)}">1</parameter>
 			<!--<parameter type="int" name="devices" min="0" max="1" displaytext="{tr(devices)}">0</parameter>-->
 		</submenu>
 		<submenu name="Fadetimes" displaytext="{tr(Delay, Shift- and Fadetimes)}">
@@ -158,6 +159,10 @@
 		<token name="tr(ecmInside)">
 			<trans lang="en_EN">ECM inside of channelinfo</trans>
 			<trans lang="de_DE">ECM innerhalb der Kanalinfo</trans>
+		</token>
+		<token name="tr(showDiscUsage)">
+			<trans lang="en_EN">Show discusage in recordings- and timersmenu</trans>
+			<trans lang="de_DE">Zeige Festplattenausnutzung im Aufnahmen- und Timermenü</trans>
 		</token>
 		<!--<token name="tr(devices)">
 			<trans lang="en_EN">DVB-Devices in mainmenu (0=light, 1=with bars)</trans>
